# stupid-json

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.sh
build-tests/: stupid-json-tests
include/stupid-json/: arena.hpp  stupid.hpp
src/: arena.cpp  stupid.cpp
tests/: CMakeLists.txt
tests/samples/: test1.json  test2_malformed_number.json
tests/src/: main.cpp
